@@ -30,7 +30,7 @@ lombok {
 
 idea {
     module {
-        downloadJavadoc = false
+        downloadJavadoc = true
         downloadSources = true
     }
 }
@@ -80,6 +80,14 @@ dependencies {
     implementation('com.offbytwo.jenkins:jenkins-client:0.3.8') {
         exclude group: 'org.slf4j'
         exclude group: 'org.apache.logging.log4j'
+        // provided by Idea Platform
+        //exclude group: 'commons-io' // not exists in all products (missing in PyCharm e.g)
+        exclude group: 'commons-lang'
+        exclude group: 'commons-collections'
+        exclude group: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'jaxen'
     }
 
     testImplementation(
