@@ -2,6 +2,7 @@
 <ul>
     <li>#221 Allow showing all build results in the status bar</li>
     <li>#222 Separate icon for running builds</li>
+    <li>#217 Show Log not possible for selected Job if self-signed or invalid SSL certificate is used</li>
 </ul>
 <h3>0.13.4</h3>
 <ul>
